# mykismapping-python

./: .gitignore  README.md  pyproject.toml  specifications.md
kismapping/: cleanup.py  cli.py  geometry.py  heatpoints.py  output_file.py  output_web.py  propagation.py  render_image.py  render_polygon.py
kismapping/input/: kismet_sqlite.py  kismet_xml.py
scripts/: compare.py
